# smart-lab

./: .clangd  .gitignore  CMakeLists.txt  README.md  TODO.md  diagram.json  doc.md  platformio.ini
demo/: pin.py
firmware/: .clangd  diagram.json
firmware/include/: DHT20.h  DHT22.h  ESP32Hardware.h  IHardware.h  ITempHumSensor.h  ModeStorage.h  SmartLabCore.h
firmware/main/: CMakeLists.txt  main.cpp
firmware/src/driver/esp32/: CMakeLists.txt  DHT20.cpp  DHT20.h  DHT22.cpp  DHT22.h  ESP32Hardware.cpp  ESP32Hardware.h
firmware/src/logic/: CMakeLists.txt  SmartLabCore.cpp  SmartLabCore.h
firmware/test/: CMakeLists.txt  README.md  test_logic.cpp
main/: main.cpp
src/driver/esp32/: CMakeLists.txt  DHT22.cpp  ESP32Hardware.cpp  ESP32Hardware.h
test/: test_logic.cpp
